--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build http://http://alert675.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build http://alert675.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
